--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -563,6 +563,7 @@ blockquote {
   font-size: 1.5rem;
   text-align: center;
   align-items: center;
+  word-break: break-word;
 }
 
 .img-fluid{
